# HW27

./: conftest.py  db.sqlite3  pyproject.toml  pytests.ini
HW27/: settings.py  urls.py
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_is_published_alter_ad_name_and_more.py  0002_location_user.py  0003_alter_ads_options_alter_category_options_and_more.py
ads/urls/: urls_log.py
data/: csv_to_json.py  location.json  user.csv  user.json
tests/: conftest.py  factories.py  post_ads_test.py  selection_test.py
