[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["SavinovaIren <irka887@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
